# tap-hubspot

./: CHANGELOG.md  README.md  catalog.json  pyproject.toml  temp.json
.github/workflows/: veracode-static-scan.yml
tap_hubspot/: __init__.py  symon_exception.py
tap_hubspot/schemas/: contact_list.json
