[tool.poetry]
name = "tap-hubspot"
version = "2.9.13"
description = "Singer.io tap for extracting data from the HubSpot API"
authors = ["Stitch"]
classifiers = ["Programming Language :: Python :: 3 :: Only"]

[tool.poetry.dependencies]
python = "^3.7"
attrs = "16.3.0"
singer-python = "5.1.1"
requests = "2.20.0"
backoff = "1.3.2"
requests_mock = "1.3.0"

[tool.poetry.dev-dependencies]
pylint = "2.5.3"
nose = "1.3.7"

[tool.poetry.scripts]
tap-hubspot = "tap_hubspot:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
